# rust-learn

./: .gitignore  Cargo.toml  README.md
axum-ws/: Cargo.toml
axum-ws/src/: main.rs
dll-test/: Cargo.toml
dll-test/src/: main.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: news.proto  printer.proto
grpc/src/: client.rs  server.rs
grpc/src/pb/: helloworld.rs  mod.rs  news.rs  printer.rs
httpie/src/: main.rs
lb/: Cargo.toml
lb/src/: lib.rs  movies.rs
lb/tests/: movies.rs
lr/: Cargo.toml
lr/examples/: basic.rs
lr/src/: main.rs  media.rs
lr/tests/: commons.rs  sum.rs
src-tauri/: tauri.conf.json
src-tauri/face/src/: App.tsx
tauri-app/: .editorconfig  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
tauri-app/src-tauri/src/: cvr_sdk.rs  main.rs
thumbor/: abi.proto
thumbor/src/: main.rs
thumbor/src/pb/: abi.rs
